<?xml version="1.0"?>
<package format="3">
  <name>seyond</name>
  <version>3.0.0</version>
  <description>The seyond driver package</description>
  <maintainer email="yuechao.gu@cn.seyond.com">Yuechao Gu</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>

  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">roslib</depend>
  <depend condition="$ROS_VERSION == 1">message_generation</depend>

  <depend condition="$ROS_VERSION == 2">rclcpp</depend>
  <depend condition="$ROS_VERSION == 2">pcl</depend>
  <depend condition="$ROS_VERSION == 2">pcl_conversions</depend>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_filters</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
